# flemu

./: .gitignore  .prettierrc  README.md  lint-staged.config.js  package.json  pnpm-lock.yaml  vite.config.js
crates/hello/: Cargo.toml
crates/hello/src/: color.rs  lib.rs  nes.rs
crates/hello/src/nes/: cpu.rs  opcodes.rs
crates/hello/tests/: test_nes.rs
src/: App.svelte
src/lib/: Counter.svelte
