[package]
name = "hello"
version = "0.1.0"
authors = ["gaconkzk <gaconkzk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
lazy_static = "1.4.0"
bitflags = "1.2.1"
