[package]
name = "hello"
version = "0.1.0"
authors = ["gaconkzk <gaconkzk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wasm-timer="0.1.3"
lazy_static = "1.4.0"
bitflags = "1.2.1"
kurbo = '0.8.1'
piet = "0.4"
piet-web = "0.4"
rand="0.8.4"
gloo-events="*"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
	'console',
	'KeyboardEvent',
]

[dependencies.getrandom]
version = "0.2"
features = [
	'js',
]
